fixing some visibility bugs

--- a/src/index.css
+++ b/src/index.css
@@ -12,9 +12,12 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background-color: rgb(51, 131, 140);
   height: 100vh;
+  width: 100vw;
+  overflow: hidden;
 }
 
 #root {
   height: 100%;
   width: 100%;
+  overflow: hidden;
 }
